# watering-machine

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  platformio.ini  watering-machine.ino
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: greetings.yml
cmake/Macros/: enable_if_supported.cmake
docs/: classDiagram.md
docs/bom/: ESP82666_bom.md
docs/schematics/: WateringMachine_ESP8266.fzz
docs/uml/: all.puml  components.puml  state_diagram_commands.puml  state_diagram_events.puml  states.puml
src/: watering-machine.config_example.h  watering-machine.cpp
src/Firmware/: ControlFunctions.Test.h
src/Firmware/Arduino/: ArduinoCommandLine.h  ControlFunctions.esp8266.h  ControlFunctions.v1.h
src/Firmware/Arduino/Helpers/: ArduinoMQTTSerialization.h  WateringMachineResources.h
src/Firmware/Arduino/Middleware/Logging/: ArduinoLoggingMiddleware.cpp  ArduinoLoggingMiddleware.h
src/Firmware/Arduino/Middleware/MQTT/: ArduinoMQTTMiddleware.cpp  ArduinoMQTTMiddleware.h
src/WateringMachine/: CMakeLists.txt  WateringMachine.cpp  WateringMachine.h  WateringMachineConfig.h  WateringMachineStats.h
src/WateringMachine/Components/: CMakeLists.txt  Light.cpp  Light.h  MechanicalButton.cpp  MechanicalButton.h  MoistureSensor.cpp  MoistureSensor.h  PulsePump.cpp  PulsePump.h  SimpleMotor.cpp  SimpleMotor.h  SimplePump.cpp  SimplePump.h  SimpleSwitch.cpp  SimpleSwitch.h  WaterLevelSensor.cpp  WaterLevelSensor.h
src/WateringMachine/Components/StateMachineInterfaces/: ButtonStateMachine.cpp  ButtonStateMachine.h  MotorStateMachine.cpp  MotorStateMachine.h  PumpStateMachine.cpp  PumpStateMachine.h  StateMachine.h  SwitchStateMachine.cpp  SwitchStateMachine.h
src/WateringMachine/Middleware/: CMakeLists.txt  MiddlewareInterface.cpp  MiddlewareInterface.h
src/WateringMachine/Midleware/: MiddlewareInterface.cpp  MiddlewareInterface.h
src/WateringMachine/Midleware/Logging/: ArduinoLoggingMiddleware.cpp  ArduinoLoggingMiddleware.h
src/WateringMachine/Midleware/MQTT/: MQTTMiddleware.cpp  MQTTMiddleware.h
src/WateringMachine/States/: CMakeLists.txt  IdleState.cpp  IdleState.h  LightingState.cpp  LightingState.h  StateFactory.cpp  StateFactory.h  StateTypeEnum.h  WateringMachineStateBase.cpp  WateringMachineStateBase.h  WateringState.cpp  WateringState.h
src/WateringMachine/Utils/: CMakeLists.txt  CommandLine.h  CustomLog.cpp  CustomLog.h  DebugLevelEnum.h
test/: README
tests/: Base.hh  Base.hh.in  CMakeLists.txt  test1.cpp
tests/Firmware/: ControlFunctions.Test.h
tests/WateringMachine/Components/: Light_unitest.cpp  WateringMachine_unitest.cpp
tests/helpers/: MiddlewareTest.cpp  MiddlewareTest.h
